<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/facciaDado1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/faccia_dado_start" />

        <ImageView
            android:id="@+id/facciaDado2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/faccia_dado_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/stringSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/saldo"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/stringPuntata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:text="@string/puntata"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/inputPuntata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hintInput"
        android:textAlignment="center"
        android:inputType="number"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/buttonPunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startGame"
        android:text="@string/buttonString" />

    <EditText
        android:id="@+id/provaSomma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hintTry"
        android:inputType="number"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonProva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/buttonCheck"
        android:textAlignment="center"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/risultato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/resultString"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/buttonContinueColor"
        android:onClick="continueGame"
        android:text="@string/resetButton"
        android:visibility="invisible" />

</LinearLayout>